<resources>
    <string name="app_name">School Application</string>
    <string name="welcom_note">WelCome to PMS</string>
    <string name="login_here">Login Here</string>
    <string name="username">User Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login:</string>
    <string name="sname">Name:</string>
    <string name="sfather">Father Name:</string>
    <string name="srollno">Roll No:</string>
    <string name="saddress">Address:</string>
    <string name="scontact">Contact No:</string>
    <string name="email">Email</string>
    <string name="not_member">No account yet? Create one</string>
    <string name="error_valid_email_password">Invalid email or password</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="success_message">Save Successfully</string>
    <string name="error_email_exists">Already Exists</string>
    <string name="error_password_match">password not match</string>
    <string name="error_message_name">Not correct name</string>
    <string name="error_message_email">Not correct email</string>
    <string name="error_message_password">password lessthen 6</string>
    <string name="error_message_confirmpassword">no match password</string>
</resources>
