<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.UI.StudentInformation"
    android:orientation="vertical"
    android:weightSum="6">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/HEX">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/welcom_note"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1.1"
        android:background="@color/HEX">
        <TextView
            android:text="@string/sname"
            android:layout_marginStart="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/gray"
            />
        <EditText
            android:id="@+id/stname"
            android:layout_margin="5sp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1.1"
        android:background="@color/HEX"
        >
        <TextView
            android:text="@string/sfather"
            android:textColor="@color/gray"
            android:layout_marginStart="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/stfathername"
            android:layout_margin="5sp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:background="@color/HEX">
        <TextView
            android:text="@string/srollno"
            android:layout_marginStart="20sp"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/strollno"
            android:layout_margin="5sp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="30sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/HEX"
        >
        <TextView
            android:text="@string/saddress"
            android:layout_marginStart="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/gray"
            />
        <EditText
            android:id="@+id/staddress"
            android:layout_margin="5sp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:background="@color/HEX">
        <TextView
            android:text="@string/scontact"
            android:layout_marginStart="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/gray"
            />
        <EditText
            android:id="@+id/stcontact"
            android:layout_margin="5sp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="30sp" />

    </LinearLayout>

</LinearLayout>