<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HEX"
    tools:context=".UI.UI.LoginActivity"
    android:orientation="vertical"
    android:weightSum="5"
    >
    <LinearLayout

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/welcom_note"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/login_here"
             android:textColor="@color/white"
             android:gravity="center"
             android:textSize="16sp"
             android:textStyle="italic"
             android:layout_marginTop="20sp"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
          android:orientation="vertical"
        >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              >
              <android.support.design.widget.TextInputLayout
                  android:id="@+id/username_text_input_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

                  <EditText
                      android:id="@+id/etUsername"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerHorizontal="true"
                      android:layout_centerVertical="true"
                      android:ems="17"
                      android:layout_marginStart="40sp"
                      android:hint="@string/username" />

              </android.support.design.widget.TextInputLayout>

          </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="16"
                android:layout_marginStart="40sp"
                android:hint="@string/password" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            />
    </LinearLayout>

    </LinearLayout>